# hotel_ws

./: .gitignore  README.md
maps/: my_map.pgm  my_map.yaml
src/: _piper  moveit_pose_control.py
src/goal_trigger_action/: package.xml  setup.cfg  setup.py
src/goal_trigger_action/goal_trigger_action/: goal_arrived_pointcloud_node.py
src/grasp_inference/: grasp_result.npy  package.xml  setup.py
src/grasp_inference/grasp_inference/: grasp_inference_node.py
src/grasp_inference/grasp_inference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/grasp_pose_executor/: CMakeLists.txt  package.xml
src/grasp_pose_executor/src/: grasp_pose_executor.cpp
src/my_moveit_example/: CMakeLists.txt  package.xml
src/my_moveit_example/src/: my_planner.cpp  my_planner_node.cpp
src/object_recognition/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/object_recognition/object_recognition/: depth_tf_node.py  trashcan_geometry_node.py  yolo_rgb_node.py
src/piper/launch/: start_single_piper_rviz.launch.py
src/piper/piper/: piper_ctrl_single_node.py  srdf.xml
src/piper_description/rviz/: piper_ctrl.rviz
src/piper_description/urdf/: piper_description.xacro
src/piper_moveit/piper_with_gripper_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_planning_pipeline.yaml  piper.srdf  ros2_controllers.yaml  servo.yaml
src/piper_moveit/piper_with_gripper_moveit/launch/: demo.launch.py  frames_2025-11-13_18.25.35.gv  frames_2025-11-13_18.39.32.gv  piper_servo.launch.py
src/red_ball_tracking/: package.xml  setup.cfg  setup.py
src/red_ball_tracking/red_ball_tracking/: .follower_node.py.swp  follower_node.py
src/sphere_tracker/: package.xml  setup.cfg  setup.py
src/sphere_tracker/sphere_tracker/: red_ball_follower.py
src/target_to_nav/: package.xml  setup.cfg  setup.py
src/target_to_nav/target_to_nav/: target_to_nav_node.py
src/trashcan_explorer/: package.xml  setup.cfg  setup.py
src/trashcan_explorer/trashcan_explorer/: trashcan_explorer_node.py  trashcan_filter_node.py
