<?xml version="1.0"?>
<package format="3">
  <name>grasp_inference</name>
  <version>0.0.1</version>
  <description>GraspNet inference ROS2 node</description>

  <maintainer email="example@example.com">araishogo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
